[package]
name = "dpl"
version = "0.1.0"
edition = "2021"
description = "Chunked archive transfer — rsync-compatible CLI for slow / small-file-heavy destinations"
license = "MIT"
authors = ["mehdi.guiraud@gmail.com"]

[[bin]]
name = "dpl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
walkdir = "2.5"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
humansize = "2"
anyhow = "1"
num_cpus = "1"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
blake3 = "1.5"
indicatif = "0.17"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
aws-creds = "0.38"
aws-region = "0.27"
os_pipe = "1.2"
tokio = { version = "1", features = ["rt-multi-thread"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
